# cube_scramble_generator

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
